--- a/templates/update.html
+++ b/templates/update.html
@@ -49,6 +49,7 @@
     <div class="d-flex align-items-center justify-content-center">
         <form method="POST" class="mt-5">
             {% csrf_token %}
+            {{ form.errors }}
             <div class="form-group">
                 <label for="first_name">Имя</label>
                 <input required value="{{ object.first_name }}" type="text" id="first_name" name="first_name"
@@ -163,8 +164,11 @@
             </div>
             <div class="form-group">
                 <label for="birth_city">Место рождения</label>
-                <input required value="{{ object.birth_city }}" type="text" id="birth_city" name="birth_city"
-                       class="form-control">
+                <select name="birth_city" id="birth_city" class="form-control">
+                    {% for city in cities %}
+                        <option value="{{ city.id }}">{{ city.name }}</option>
+                    {% endfor %}
+                </select>
                 {% if form.errors %}
                     {% for error in form.birth_city.errors %}
                         <div class="alert alert-danger">
@@ -175,8 +179,11 @@
             </div>
             <div class="form-group">
                 <label for="current_city">Место проживания</label>
-                <input required value="{{ object.current_city }}" type="text" id="current_city" name="current_city"
-                       class="form-control">
+                <select name="current_city" id="current_city" class="form-control">
+                    {% for city in cities %}
+                        <option value="{{ city.id }}">{{ city.name }}</option>
+                    {% endfor %}
+                </select>
                 {% if form.errors %}
                     {% for error in form.current_city.errors %}
                         <div class="alert alert-danger">
@@ -216,7 +223,7 @@
                 <input placeholder="+XXXXXXXXXXXX" pattern="^[0-9\-\+]{13}$"
                        data-valid-example="+375259357914" value="{{ object.mobile_phone_number }}" type="text"
                        id="mobile_phone_number"
-                       name="mobile_phone_number" class="form-control masked">```
+                       name="mobile_phone_number" class="form-control masked">
                 {% if form.errors %}
                     {% for error in form.mobile_phone_number.errors %}
                         <div class="alert alert-danger">
@@ -262,8 +269,11 @@
             </div>
             <div class="form-group">
                 <label for="city_of_residence">Город прописки</label>
-                <input required value="{{ object.city_of_residence }}" type="text" id="city_of_residence"
-                       name="city_of_residence" class="form-control">
+                <select name="city_of_residence" id="city_of_residence" class="form-control">
+                    {% for city in cities %}
+                        <option value="{{ city.id }}">{{ city.name }}</option>
+                    {% endfor %}
+                </select>
                 {% if form.errors %}
                     {% for error in form.city_of_residence.errors %}
                         <div class="alert alert-danger">
@@ -275,53 +285,30 @@
             <div class="form-group">
                 <label for="marital_status">Семейное положение</label>
                 <select required name="marital_status" id="marital_status" class="form-control">
-                    <option selected="{% if object.marital_status == 'married' %} selected {% endif %}" value="married">
-                        Женат/Замужем
-                    </option>
-                    <option selected="{% if object.marital_status == 'divorced' %} selected {% endif %}"
-                            value="divorced">Разведен/Разведена
-                    </option>
-                    <option selected="{% if object.marital_status == 'widowed' %} selected {% endif %}" value="widowed">
-                        Вдовец/Вдова
-                    </option>
-                    <option selected="{% if object.marital_status == 'not_married' %} selected {% endif %}"
-                            value="not_married">Не женат/Не замужем
-                    </option>
+                    {% for marital_status in marital_statuses %}
+                        <option value="{{ marital_status.id }}">{{ marital_status.name }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="form-group">
                 <label for="citizenship">Гражданство</label>
                 <select required name="citizenship" id="citizenship" class="form-control">
-                    <option selected="{% if object.citizenship == 'uzbek' %} selected {% endif %}" value="uzbek">Узбек
-                    </option>
-                    <option selected="{% if object.citizenship == 'belarussian' %} selected {% endif %}"
-                            value="belarussian">Белорус
-                    </option>
-                    <option selected="{% if object.citizenship == 'russian' %} selected {% endif %}" value="russian">
-                        Русский
-                    </option>
+                    {% for citizenship in citizenships %}
+                        <option value="{{ citizenship.id }}">{{ citizenship.name }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="form-group">
-                <label for="is_disabled">Инвалидность</label>
-                <select required name="is_disabled" id="is_disabled" class="form-control">
-                    <option selected="{% if object.is_disabled == 'not_disabled' %} selected {% endif %}"
-                            value="not_disabled">Инвалидность отсуствует
-                    </option>
-                    <option selected="{% if object.is_disabled == 'first_group' %} selected {% endif %}"
-                            value="first_group">Первая группа инвалидности
-                    </option>
-                    <option selected="{% if object.is_disabled == 'second_group' %} selected {% endif %}"
-                            value="second_group">Вторая группа инвалидности
-                    </option>
-                    <option selected="{% if object.is_disabled == 'third_group' %} selected {% endif %}"
-                            value="third_group">Третья группа инвалидности
-                    </option>
+                <label for="disability">Инвалидность</label>
+                <select required name="disability" id="disability" class="form-control">
+                    {% for disability in disabilities %}
+                        <option value="{{ disability.id }}">{{ disability.name }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="form-group">
                 <label for="name">Пенсионер</label>
-                <input required type="checkbox" id="name" name="name" {% if object.is_retired %}checked{% endif %}>
+                <input type="checkbox" id="name" name="name" {% if object.is_retired %}checked{% endif %}>
             </div>
             <div class="form-group">
                 <label for="name">Ежемесячный доход</label>
